--- a/index.html
+++ b/index.html
@@ -4,10 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="src/css/reset.css" />
-    <script type="module" src="src/js/todo-app.js" defer></script>
-    <script type="module" src="src/js/todo-form.js" defer></script>
-    <script type="module" src="src/js/todo-item.js" defer></script>
-    <script type="module" src="src/js/todo-list.js" defer></script>
+    <script type="module" src="src/js/components/todo-app.js" defer></script>
     <title>Web Components</title>
   </head>
 
