--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="src/css/reset.css" />
     <script type="module" src="src/js/components/todo-app.js" defer></script>
+    <link href="src/css/reset.css" rel="stylesheet" />
     <title>Web Components</title>
   </head>
 
