[pwa] add manifest

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script type="module" src="src/js/components/todo-app.js" defer></script>
     <link href="src/css/reset.css" rel="stylesheet" />
+    <link rel="manifest" href="manifest.json" />
     <title>Web Components</title>
   </head>
 
