--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="src/js/pwa.js"></script>
+    <script src="src/js/pwa.js" defer></script>
     <script type="module" src="src/js/components/todo-app.js" defer></script>
     <link href="src/css/reset.css" rel="stylesheet" />
     <link rel="manifest" href="manifest.json" />
